--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
-    "redux-firestore": "^0.5.8"
+    "redux-firestore": "^0.5.8",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
